examples/test/testpolicy14014.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14014
  namespace: namespace379
spec:
  podSelector:
    matchLabels:
      key42: value24
      key13: value13
      key44: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value26
          key44: value27
          key37: value13
